# ho11oscope-app

./: .gitmodules  README.md  build.gradle  settings.gradle
opengl/: CMakeLists.txt  build.gradle
opengl/src/main/: AndroidManifest.xml
opengl/src/main/java/net/capellari/julien/opengl/: AssimpMesh.kt  BaseProgram.kt  BaseStructure.kt  Color.kt  ColorAlpha.kt  DirectionalLight.kt  Extensions.kt  GLUtils.kt  IndiceBufferObject.kt  JNITest.java  Light.kt  Mat2.kt  Mat3.kt  Mat4.kt  Material.kt  PointLight.kt  Struct.kt  TexCoord.kt  Vec2.kt  Vec3.kt  Vec4.kt  VertexBufferObject.kt
opengl/src/main/java/net/capellari/julien/opengl/base/: BaseBufferObject.kt  BaseMat.kt  BaseMesh.kt  BaseProgram.kt  BaseSharedStorage.kt  BaseSharedStorageBlock.kt  BaseStructure.kt  BaseUniformBlock.kt  BaseVec.kt  BufferObject.kt  JNIClass.java  Mesh.kt  Program.kt  SharedStorageBlock.kt  Structure.kt  UniformBlock.kt
opengl/src/main/java/net/capellari/julien/opengl/buffers/: BindedBufferObject.kt  BufferObject.kt  BufferObjectInterfaces.kt  ElementBufferObject.kt  ShaderStorageBufferObject.kt  UniformBufferObject.kt  VertexBufferObject.kt
opengl/src/main/java/net/capellari/julien/opengl/jni/: JNIMesh.java  Model.java
opengl/src/main/java/net/capellari/julien/opengl/mtl/: Material.kt  MtlLibrary.kt  MtlParseException.kt
opengl/src/main/jni/: color.cpp  color.h  jnitools.cpp  jnitools.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  test.cpp  test.h  utils.h  vec.cpp  vec.h
opengl/src/test/java/net/capellari/julien/opengl/: MatrixUnitTest.kt  VectorUnitTest.kt
(+264 files in other folders)
